# 3D-Graph

./: .gitignore  3D Graph.sln  CMakeLists.txt  README.md  triangle.cpp
3D Graph/: 3D Graph.cpp  3D Graph.vcxproj  3D Graph.vcxproj.filters  3d.h  Camera.cpp  Camera.h  ControlLoop.cpp  ControlLoop.h  LinearRegression.cpp  MainLoop.cpp  MainLoop.h  Triangle.cpp  Triangle.h  Vector.h  Vector3D.cpp  Vector3D.h  render.h  renderlinux.cpp  renderlinux.h  stdafx.cpp  stdafx.h
3D Graph/x64/Debug/: 3D Graph.pch  vc141.idb
3D Graph/x64/Debug/3D Graph.tlog/: 3D Graph.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: 3DGraph.cpp  ControlLoop.cpp  ReadMe.txt  Triangle.cpp  Triangle.h  Vector2D.cpp  Vector2D.h  renderlinux.cpp
x64/Debug/: 3D Graph.ilk
